agregue metodo de pago

--- a/single-product-details.html
+++ b/single-product-details.html
@@ -218,7 +218,7 @@
             <a href="cart.html">
                 <h2>One Shoulder Glitter Midi Dress</h2>
             </a>
-            <p class="product-price"><span class="old-price">$65.00</span> $49.00</p>
+            <p class="product-price"><span class="old-price">$999.00</span> $879.00</p>
             <p class="product-desc">Mauris viverra cursus ante laoreet eleifend. Donec vel fringilla ante. Aenean finibus velit id urna vehicula, nec maximus est sollicitudin.</p>
 
             <!-- Form -->
@@ -241,7 +241,7 @@
                 <!-- Cart & Favourite Box -->
                 <div class="cart-fav-box d-flex align-items-center">
                     <!-- Cart -->
-                    <a href="www.facebook.com" name="addtocart" value="5" class="btn essence-btn">Comprar ahora</a>
+                    <a href="https://buy.stripe.com/test_8wM7sDbvw0y2gGQaEE" name="addtocart" value="5" class="btn essence-btn">Comprar ahora</a>
                     <!-- Favourite -->
                     <div class="product-favourite ml-4">
                         <a href="#" class="favme fa fa-heart"></a>
